# loon

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  deny.yml  e2e-external.yml  llm-e2e.yml
crates/loon/: Cargo.toml
crates/loon-app-modules/: Cargo.toml
crates/loon-app-modules/src/: agents.rs  canned_responses.rs  capabilities.rs  context_variables.rs  customers.rs  evaluations.rs  glossary.rs  guidelines.rs  journeys.rs  lib.rs  relationships.rs  services.rs  sessions.rs  tags.rs
crates/loon-core/: Cargo.toml
crates/loon-core/src/: agent.rs  async_utils.rs  basic_tracer.rs  canned_response.rs  capability.rs  common.rs  console_logger.rs  customer.rs  entity_cq.rs  error.rs  glossary.rs  guideline.rs  guideline_tool.rs  id_generator.rs  ids.rs  journey.rs  journey_guideline_projection.rs  lib.rs  logger.rs  macros.rs  mcp_client.rs  mcp_service.rs  meter.rs  observation.rs  openapi_service.rs  plugin.rs  relationship.rs  service_registry.rs  session.rs  shot.rs  tag.rs  tool.rs  tool_context.rs  tool_insights.rs  tool_service.rs  tracer.rs  tracing_otel.rs  variable.rs
crates/loon-core/src/stores/: agent.rs  canned_response.rs  capability.rs  customer.rs  document_backed.rs  glossary.rs  guideline.rs  guideline_tool.rs  in_memory.rs  journey.rs  mod.rs  observation.rs  relationship.rs  session.rs  shot.rs  tag.rs  tool.rs  variable.rs
crates/loon-emission/: Cargo.toml
crates/loon-emission/src/: buffer.rs  emitter.rs  error.rs  lib.rs  publisher.rs  types.rs
crates/loon-engine/: Cargo.toml
crates/loon-engine/benches/: alpha_engine.rs
crates/loon-engine/src/: alpha_engine.rs  canned_response_generator.rs  engine.rs  engine_context.rs  entity_context.rs  error.rs  hooks.rs  lib.rs  message_event_composer.rs  message_generator.rs  optimization_policy.rs  perceived_performance_policy.rs  planner.rs  prompt_builder.rs  relational_resolver.rs  tool_event_generator.rs
crates/loon-engine/src/guideline_matching/: context.rs  custom_strategy.rs  llm_matcher.rs  matcher.rs  mod.rs  strategy_resolver.rs
crates/loon-engine/src/health/: health_reporter.rs  mod.rs  views.rs
crates/loon-engine/src/indexing/: behavioral_change_evaluation.rs  common.rs  customer_dependent_action_detector.rs  guideline_action_proposer.rs  guideline_agent_intention_proposer.rs  guideline_continuous_proposer.rs  indexer.rs  journey_reachable_nodes_evaluation.rs  mod.rs  relative_action_proposer.rs  tool_running_action_detector.rs
crates/loon-engine/src/tool_calling/: batcher.rs  caller.rs  mod.rs  overlapping_tools_batch.rs  single_tool_batch.rs
crates/loon-nlp/: Cargo.toml
crates/loon-nlp/src/: config.rs  embedding.rs  error.rs  fallback.rs  generator.rs  lib.rs  macros.rs  moderation.rs  policies.rs  schematic.rs  service.rs  test_utils.rs  tokenization.rs
crates/loon-nlp/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_provider.rs
crates/loon-persistence/: Cargo.toml
crates/loon-persistence/src/: config.rs  distributed_state.rs  document.rs  error.rs  filter.rs  lib.rs  migration.rs  migration_json.rs  vector.rs
crates/loon-persistence/src/backends/: json_file.rs  mod.rs  mongodb.rs
crates/loon-persistence/src/vector/: chroma.rs  mod.rs  qdrant.rs
crates/loon-persistence/tests/: e2e_redis.rs
crates/loon-sdk/: Cargo.toml
crates/loon-sdk/src/: error.rs  lib.rs  server.rs  tags.rs  tool_context.rs  variable.rs
crates/loon-server/: Cargo.toml
crates/loon-server/src/: app.rs  auth.rs  config.rs  lib.rs  main.rs
crates/loon-server/src/api/: common.rs  mod.rs
crates/loon-server/src/middleware/: auth.rs  rate_limit.rs
crates/loon-server/src/routes/: agents.rs  canned_responses.rs  chat.rs  context_variables.rs  customers.rs  glossary.rs  guidelines.rs  health.rs  journeys.rs  mod.rs  observations.rs  relationships.rs  sessions.rs  tags.rs  tools.rs
crates/loon/src/: lib.rs  main.rs  repl.rs
docs/: PROGRESS.md  integration-test-output.md
docs/k8s/: README.md  ci-secrets.md  loon-server-deployment.yaml
docs/reference/: parlant-overview.md
docs/reviews/: 2026-06-19-loon-final-review.md  2026-06-25-loon-final-review.md
docs/superpowers/plans/: 2026-06-15-loon-phase1.md  2026-06-23-loon-strengthening-plan.md  2026-06-25-loon-final-fixes-plan.md  2026-06-25-loon-patch-plan.md
docs/superpowers/specs/: 2026-06-15-loon-phase1-design.md  2026-06-23-loon-strengthening-spec.md
scripts/: run-llm-live.sh
tests/: e2e_agent_loop.rs  e2e_mongodb.rs  e2e_ollama.rs  e2e_openai_live.rs
