[package]
name = "loon-app-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
loon-core = { path = "../loon-core" }
loon-emission = { path = "../loon-emission" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
