[package]
name = "loon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
base64 = "0.22"
xxhash-rust = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
