[package]
name = "loon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
base64 = "0.22"
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
loon-persistence = { path = "../loon-persistence" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
