[package]
name = "loon-nlp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
loon-core = { path = "../loon-core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
wiremock = "0.6"

[lints]
workspace = true
