[package]
name = "loon-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
mongodb = "3"
bson = "2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
