[package]
name = "loon-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
mongodb = "3"
bson = "2"
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
wiremock = "0.6"

[lints]
workspace = true
