[package]
name = "loon-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
loon-core = { path = "../loon-core" }
loon-emission = { path = "../loon-emission" }
loon-persistence = { path = "../loon-persistence" }
loon-nlp = { path = "../loon-nlp" }
loon-engine = { path = "../loon-engine" }
loon-app-modules = { path = "../loon-app-modules" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true